--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,8 @@ href="/public/bower_components/angular-material/angular-material.min.css">
 <script src="/public/bower_components/angular-messages/angular-messages.min.js"></script>
 <script src="/public/bower_components/angular-material/angular-material.min.js"></script>
 <script src="/public/bower_components/angular-material-icons/angular-material-icons.min.js"></script>
-
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 <script
 src="/public/bower_components/angular-resource/angular-resource.js"></script>
     <script
